# graduation_project

./: pyproject.toml
chemistry_store/: manage.py
chemistry_store/chemistry_store/: asgi.py  settings.py  urls.py  wsgi.py
