[tool.poetry]
name = "graduation-project"
version = "0.1.0"
description = ""
authors = ["Stefan2501 <stef.12@mail.ru>"]
readme = "README.md"
packages = [{include = "chemistry_store"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
